--- a/EXAMEN PROGRA/Listas.html
+++ b/EXAMEN PROGRA/Listas.html
@@ -1,38 +1,17 @@
 <DOCTYPE html>
-<head>
 <title>Examen de programación</title>
-<style type="text/css">
-  #navegador ul{
-    list-style-type: none;
-    text-align: center;
-  }
-  #navegador li{
-    display: inline;
-    text-align: center;
-    margin: 0 50px 0 0;
-  }
-  #navegador li a {
-    padding: 10px 7px 8px 7px;
-    color: #666;
-    background-color: #eeeeee;
-    border: 1px solid #ccc;
-    text-decoration: none;
-  }
-  #navegador li a:hover{
-    background-color: #333333;
-    color: #ffffff;
-  }
-</style>
-</head>
+<link rel="stylesheet" type="text/css" href="estilo.css">
+
 <body bgcolor="#00ccee" tex="red" link="blue" alink="red" vlink="green">
 
   <div id="navegador">
     
       <ul>
-        <li><a href="principal.html">PRINCIPAL</a></li>
-      <li><a href="Listas.html">MISIÓN</a></li>
-      <li><a href="Servicios.html">SERVICIOS O CONTENIDOS</a></li>
+   <center>
+     <li><a href="Listas.html">MISIÓN</a></li>
+     <li><a href="Servicios.html">SERVICIOS O CONTENIDOS</a></li>
       <li><a href="Contactos.html">CONTACTOS</a></li>
+</center>
   </ul>
   </div>
   <body background="fondo3.jpg">
@@ -46,3 +25,4 @@
 <h2><li>Tener los mejores clientes</li></h2>
 </ul>
 </body>
+
