--- a/EXAMEN PROGRA/Servicios.html
+++ b/EXAMEN PROGRA/Servicios.html
@@ -2,6 +2,9 @@
 <head>
 <title>Examen de programación</title>
 <style type="text/css">
+h1 {
+color : blue;
+}
   #navegador ul{
     list-style-type: none;
     text-align: center;
@@ -32,7 +35,7 @@
   <div id="navegador">
     
       <ul>
-        <li><a href="principal.html">PRINCIPAL</a></li>
+ 
       <li><a href="Listas.html">MISIÓN</a></li>
       <li><a href="Servicios.html">SERVICIOS O CONTENIDOS</a></li>
       <li><a href="Contactos.html">CONTACTOS</a></li>
