--- a/EXAMEN PROGRA/EXAMEN.HTML
+++ b/EXAMEN PROGRA/EXAMEN.HTML
@@ -1,8 +1,10 @@
 <DOCTYPE html>
 <head>
 <title>Examen de programación</title>
+
+<span style="font-size:23px;color:#FF0000"> 
 <style type="text/css">
-  #navegador ul{
+#navegador ul{
     list-style-type: none;
     text-align: center;
   }
@@ -24,7 +26,7 @@
   }
 </style>
 </head>
-<body bgcolor="#00ccee" tex="red" link="blue" alink="red" vlink="green">
+<body bgcolor="#00ccee" tex="red" link="blue" alink="red" vlink="black">
 
   <div id="navegador">
     
@@ -35,7 +37,8 @@
       <li><a href="Contactos.html">CONTACTOS</a></li>
   </ul>
   </div>
-<body background="fondo2.jpg">
+<body background="imagen0.jpg">
+
 <center><u><h1>BIENVENIDOS ALQUIFIESTAS</h1></center></u>
 <center><img src="imagen1.JPG" width="400" height="300"></center>
 
