--- a/EXAMEN.HTML
+++ b/EXAMEN.HTML
@@ -37,7 +37,7 @@
       <li><a href="Contactos.html">CONTACTOS</a></li>
   </ul>
   </div>
-<body background="imagen0.JPG">
+<body background="imagen0.jpg">
 
 <center><u><h1>BIENVENIDOS ALQUIFIESTAS</h1></center></u>
 <center><img src="imagen1.JPG" width="400" height="300"></center>
