--- a/TAREA2/EXAMEN.HTML
+++ b/TAREA2/EXAMEN.HTML
@@ -39,7 +39,9 @@
   </div>
 <body background="imagen0.jpg">
 
-<center><u><h1>BIENVENIDOS ALQUIFIESTAS</h1></center></u>
+    <center><u><h1>BIENVENIDOS ALQUIFIESTAS</h1></center></u>
+    <center><img src="imagen2.jpg" width="400" height="300"></center>
+
 
   </body>
   </html> 
