--- a/TAREA2/Contactos.html
+++ b/TAREA2/Contactos.html
@@ -36,9 +36,10 @@
   </ul>
   </div>
   <h1>CONTACTENOS</h1>
+  <img src="imagen3.jpg" width="200" height="100">
 
-<img src="imagen3.JPG" width="200" height="100">
-<h2>CORREO</h2>
+<h2>CORREO</h2
+  
 <b><li><a href="ALQUIFIESTAS@GMAIL.COM" target="_blank" rel="noreferrer">ALQUIFIESTAS@GMAIL.COM</a></li></b>
 <br><br>
 
